--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ body{min-height:100vh;}
  */
 #landing-page .bd-example{
     position: relative;
-    background-color: #f5f6fa;
+    background-color: white;
 }
 
 #landing-page .carousel-item img{
@@ -177,6 +177,80 @@ content: "";
     color: var(--oneClick3);
     padding-bottom: 3rem;
 }
+
+/* why choose us css */
+
+#whoarewe .text-body{
+    margin: 1rem 0 7rem 0;
+}
+
+#whoarewe .text-body h3{
+    font-weight: bold;
+    color: var(--oneClick1);
+    font-size: 1.7em;
+    margin-bottom: 1.8rem;
+}
+
+
+#whoarewe .text-body p{
+    font-size: 1em;
+    color: var(--oneClick3);
+    margin-bottom: 1.5rem;
+}
+
+#whoarewe .text-body a{
+    padding: .4rem 2rem;
+    background-color: var(--oneClick1);
+    border: .1rem solid var(--oneClick1);
+    color: white;
+    text-decoration: none;
+    transition: all 300ms ease-in-out;
+}
+
+
+#whoarewe .text-body a:hover{
+    color: var(--oneClick1);
+    background-color: transparent;
+
+}
+/* accordian */
+
+#whoarewe .accordion .btn-link{
+    text-decoration: none;
+    color: var(--oneClick1);
+    font-weight: bold;
+
+}
+
+
+#whoarewe .accordion .card-header{
+    background-color: white;
+    padding: .5rem 2rem;
+    position: relative;
+}
+#whoarewe .accordion .btn-link::after{
+    content: '';
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 7px 5px 0;
+    border-color: var(--oneClick1) transparent transparent transparent;
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+    transition: all 300ms ease-in-out;
+}
+
+
+
+#whoarewe .accordion .card-body{
+    font-size: 1em;
+    color: var(--oneClick3);
+}
+
+
+/* end of why choose us css */
 /* we offer css */
 #we-offer{
     padding: 4rem 0;
