--- a/css/style.css
+++ b/css/style.css
@@ -20,17 +20,21 @@
 font-family: 'Roboto Slab', serif;
 }
 /* nav color change */
-body{min-height:100vh;}
-.fixed-top{
-  transition:500ms ease;
-  background:transparent;
-}
-.fixed-top.scrolled{
-  background:#000;
-}
-  
+
+
+
+.navbar-fixed-top.scrolled {
+	background-color: rgba(255,255,255,0.9) !important;
+	transition: background-color 200ms linear;
+  }
+
 
 /* end of nav color change */
+
+
+#header {
+    width: 100%;
+}
 
 #header .navbar-brand img{
     width: 140px;
