--- a/css/style.css
+++ b/css/style.css
@@ -327,3 +327,45 @@ margin: auto;
     font-family: 'Poppins', sans-serif;
     text-shadow: 1px 1px 1px var(--oneClick3);
 }
+
+#recent-work{
+ padding: 4rem 0;
+}
+
+#recent-work a.select img{
+    width: 100%;
+}
+
+#recent-work .one-click{
+    background-color: #f5f6fa;
+    padding: 3rem .5rem;
+    border: .1rem solid var(--oneClick3);
+    height: 429px;
+    margin-bottom: 1.8rem;
+    position: relative;
+}
+#recent-work .one-click a{
+    position: absolute;
+    top: 25%;
+}
+
+#recent-work .one-click2{
+    background-color: #f5f6fa;
+    padding: 3rem .5rem;
+    border: .1rem solid var(--oneClick3);
+    margin-bottom: 1.8rem;
+    height: 200px;
+}
+#recent-work .one-click3{
+    background-color: #f5f6fa;
+    padding: 3rem .5rem;
+    border: .1rem solid var(--oneClick3);
+    height: 200px;
+}
+
+/* contact us soon */
+
+#contact-us{
+    padding: 4rem 0;
+    background-color: #f5f6fa;
+}
