--- a/css/style.css
+++ b/css/style.css
@@ -183,9 +183,12 @@ content: "";
 }
 
 /* why choose us css */
-
+#whoarewe{
+    padding: 1rem 0;
+}
 #whoarewe .text-body{
     margin: 1rem 0 7rem 0;
+
 }
 
 #whoarewe .text-body h3{
@@ -488,3 +491,149 @@ footer{
     color: var(--oneClick1);
 }
 /* end footer section */
+
+
+/* imagse section for all pages */
+#landing-page .image-section{
+    background-image: url(../img/background-close-up-communication-955448.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    height: 50vh;
+    margin-bottom: 3rem;
+    clip-path: polygon(50% 0%, 100% 0, 100% 95%, 50% 100%, 0 95%, 0 0);
+}
+.image-section .image-wrap {
+    position: relative;
+}
+
+.image-section .image-wrap .texts{
+    position: absolute;
+    width: 100%;
+    padding-top: 25vh;
+}
+.image-section .image-wrap .texts h3{
+    color: var(--oneClick1);
+    font-weight: 900;
+    font-size: 3rem;
+    font-family: 'Poppins', sans-serif
+}
+
+.image-section .breadcrumb a{
+    color: var(--oneClick1);
+}
+
+
+/* enf  of imag sectin */
+
+#team-section{
+    background-color: #f5f6fa!important;
+    padding: 4rem 0;
+}
+
+.our-team {
+    padding: 30px 0 40px;
+    margin-bottom: 30px;
+    background-color:  white;
+    text-align: center;
+    overflow: hidden;
+    position: relative;
+  }
+  
+  .our-team .picture {
+    display: inline-block;
+    height: 130px;
+    width: 130px;
+    margin-bottom: 50px;
+    z-index: 1;
+    position: relative;
+  }
+  
+  .our-team .picture::before {
+    content: "";
+    width: 100%;
+    height: 0;
+    border-radius: 50%;
+    background-color: var(--oneClick1);
+    position: absolute;
+    bottom: 135%;
+    right: 0;
+    left: 0;
+    opacity: 0.9;
+    transform: scale(3);
+    transition: all 0.3s linear 0s;
+  }
+  
+  .our-team:hover .picture::before {
+    height: 100%;
+  }
+  
+  .our-team .picture::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: var(--oneClick1);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
+  
+  .our-team .picture img {
+    width: 100%;
+    height: auto;
+    border-radius: 50%;
+    transform: scale(1);
+    transition: all 0.9s ease 0s;
+  }
+  
+  .our-team:hover .picture img {
+    box-shadow: 0 0 0 14px var(--oneClick2);
+    transform: scale(0.7);
+  }
+  
+  .our-team .title {
+    display: block;
+    font-size: 15px;
+    color: var(--oneClick2);
+    text-transform: capitalize;
+  }
+
+
+  .our-team .social {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    background-color: var(--oneClick1);
+    position: absolute;
+    bottom: -100px;
+    left: 0;
+    transition: all 0.5s ease 0s;
+  }
+  
+  .our-team:hover .social {
+    bottom: 0;
+  }
+  
+  .our-team .social li {
+    display: inline-block;
+  }
+  
+  .our-team .social li a {
+    display: block;
+    padding: 10px;
+    font-size: 17px;
+    color: white;
+    transition: all 0.3s ease 0s;
+    text-decoration: none;
+  }
+  
+  .our-team .social li a:hover {
+    color: var(--oneClick1);
+    background-color: var(--oneClick2);
+  }
+
+  
+  /* enf of current section */
